--- a/index.html
+++ b/index.html
@@ -6,9 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ETH Game</title>
     <script src="//cdn.jsdelivr.net/npm/phaser@3.15.1/dist/phaser.min.js"></script>
+    <script src="https://cdn.ethers.io/lib/ethers-5.2.umd.min.js"
+        type="application/javascript"></script>
     <script src="./index.js"></script>
+    <script src="./abi.js"></script>
 </head>
 <body>
-    <h1>Welcome to my ETH Game</h1>
+    <h1 class="">Welcome to my ETH Game</h1>
+    <div class="">
+        <button id="enableWeb3" class="">Connect Wallet</button>
+    </div>
+    <div id="notifications" class=""></div>
 </body>
+<script src="./eth.js"></script>
 </html>
