--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
     <div class="">
         <button id="enableWeb3" class="">Connect Wallet</button>
     </div>
+    <div>
+        <h2>Pump your Bag!</h2>
+        <button onclick="buy(1)" id="buyId1" class="buy-items">Buy Pump Talisman for 0,0001 ETH</button>
+        <button onclick="buy(2)" id="buyId2" class="buy-items">Buy Super Boots for 0,0002 ETH</button>
+        <button onclick="buy(3)" id="buyId3" class="buy-items">Buy Time Warp Cape for 0,0003 ETH</button>
+    </div> 
     <div id="notifications" class=""></div>
 </body>
     <script src="./abi.js"></script>
