game items now have effect on game

--- a/index.html
+++ b/index.html
@@ -12,12 +12,15 @@
 <body>
     <h1 class="">Welcome to my ETH Game</h1>
     <div class="">
-        <button id="enableWeb3" class="">Connect Wallet</button>
+        <button id="enableWeb3" class="login-btn">Connect Wallet</button>
     </div>
+    <br/>
     <div>
         <h2>Pump your Bag!</h2>
         <button onclick="buy(1)" id="buyId1" class="buy-items">Buy Pump Talisman for 0,0001 ETH</button>
+        <br/>
         <button onclick="buy(2)" id="buyId2" class="buy-items">Buy Super Boots for 0,0002 ETH</button>
+        <br/>
         <button onclick="buy(3)" id="buyId3" class="buy-items">Buy Time Warp Cape for 0,0003 ETH</button>
     </div> 
     <div id="notifications" class=""></div>
