--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         <button id="enableWeb3" class="login-btn">Connect Wallet</button>
     </div>
     <h2>Pump your Bag!</h2>
+    <div class="balance">
+        <!--Here your GameCoin Balance is shown-->
+    </div>
     <div class="btn-div">
         <button onclick="buy(1)" id="buyId1" class="buy-btn">Buy Pump Talisman, 0,0001 ETH</button>
         <br/>
