start Coin Token for purchase

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
         <!--Here your GameCoin Balance is shown-->
     </div>
     <div class="btn-div">
-        <button onclick="buy(1)" id="buyId1" class="buy-btn">Buy Pump Talisman, 0,0001 ETH</button>
+        <button onclick="buy(1)" id="buyId1" class="buy-btn">Buy Pump Talisman, 10 GCT</button>
         <br/>
-        <button onclick="buy(2)" id="buyId2" class="buy-btn">Buy Super Boots, 0,0002 ETH</button>
+        <button onclick="buy(2)" id="buyId2" class="buy-btn">Buy Super Boots, 20 GCT</button>
         <br/>
-        <button onclick="buy(3)" id="buyId3" class="buy-btn">Buy Time Warp Cape, 0,0003 ETH</button>
+        <button onclick="buy(3)" id="buyId3" class="buy-btn">Buy Time Warp Cape, 30 GCT</button>
         <div id="notifications" class="msg"></div>
     </div> 
     
