--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div> 
     
 </body>
-    <script src="./abi.js"></script>
-    <script src="./eth.js"></script>
-    <script src="./index.js"></script>
+    <script type="module" src="./abi.js"></script>
+    <script type="module" src="./eth.js"></script>
+    <script type="module" src="./index.js"></script>
 </html>
