meta tag description

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ETH Game</title>
+    <title>Ethereum Game</title>
+    <meta name="description" content="This is my version of the game coded as part of the course Ethereum Game Programming @ Moralis Academy. We used Phaser 3.15.1 as the game engine. The coins are ERC20 Tokens. With those you can buy booster items (ERC1155 tokens). Deployed on Goerli!"/>
     <script src="//cdn.jsdelivr.net/npm/phaser@3.15.1/dist/phaser.min.js"></script>
     <script src="https://cdn.ethers.io/lib/ethers-5.2.umd.min.js"
         type="application/javascript"></script>
